// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page correctly renders a global element 1`] = `
.ms-8g3aic {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .ms-8g3aic {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-8g3aic {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-8g3aic {
    width: 700px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1xrw4cs {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1xrw4cs {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1xrw4cs {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

.ms-1azh6ix {
  margin: 0;
}

@media only screen and (min-width: 769px) {
  .ms-li15ae {
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-li15ae {
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (max-width: 575px) {
  .ms-li15ae {
    font-family: Lato;
    font-size: 16px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}


<div
  class="ms-8g3aic ms-1xrw4cs"
  id="title"
>
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="ms-1azh6ix ms-188zsbd"
    >
      <span
        class="ms-li15ae"
      >
        About Us
      </span>
    </p>
  </div>
</div>
`;

exports[`Page correctly renders a localized global element 1`] = `
.ms-8g3aic {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .ms-8g3aic {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-8g3aic {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-8g3aic {
    width: 700px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1xrw4cs {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1xrw4cs {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1xrw4cs {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

.ms-1azh6ix {
  margin: 0;
}

@media only screen and (min-width: 769px) {
  .ms-li15ae {
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-li15ae {
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (max-width: 575px) {
  .ms-li15ae {
    font-family: Lato;
    font-size: 16px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}


<div
  class="ms-8g3aic ms-1xrw4cs"
  id="title"
>
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="ms-1azh6ix ms-188zsbd"
    >
      <span
        class="ms-li15ae"
      >
        À propos de nous
      </span>
    </p>
  </div>
</div>
`;
